<resources>
    <string name="app_name">TestApplication</string>
    <string name="main_text">Подтвердите ваш номер телефона</string>
    <string name="main_auth_text">Добро пожаловать в"\n" "\"Автовокзал онлайн\"" </string>
    <string name="country_code">+996</string>
    <string name="phone_number">555123321</string>
    <string name="back_button">НАЗАД</string>
    <string name="forward_button">ДАЛЕЕ</string>
    <string name="reg_button">РЕГИСТРАЦИЯ</string>
    <string name="sign_out">Sign out</string>
    <string name="tel_text">код подтверждения</string>
    <string name="trip_id">id</string>
    <string name="trip_date">date</string>
    <string name="trip_price">price</string>
    <string name="trip_from">from</string>
    <string name="trip_to">to</string>
    <string name="phone_number_text">номер телефона</string>
    <string name="mess">Сообщение</string>
    <string name="_12_33">12:33</string>
    <string name="save_button">Сохранить</string>
    <string name="sign_app_text">Войдите в приложение</string>
    <string name="enter_your_phone_number">Введите номер телефона</string>
    <string name="continue_text">Продолжить</string>
    <string name="auth_text">Авторизируясь в приложении, вы принимаете условия лицензионного соглашения и политики конфиденциальности</string>
    <string name="verify_code_text">Подтвердите ваш номер телефона</string>
    <string name="sms_text">Введите код подтверждения из смс-сообщения</string>
    <string name="text_back">Назад</string>
    <string name="verify_sms_code_text">Подтвердить</string>
    <string name="verify_sms_code_toolbar">Подтверждения смс кода</string>
    <string name="next_text">Далее</string>
    <string name="register_text">Регистрация</string>
    <string name="first_name_text">Ваше фамилия</string>
    <string name="first_name">Фамилия</string>
    <string name="your_second_name">Ваше имя</string>
    <string name="first_name_edit">Имя</string>
    <string name="sex">Пол</string>
    <string name="register_age_text">Возраст</string>
    <string name="verify_text">Подтвердить</string>
    <string name="professions_in_medicine">Профессии в медицине</string>
    <string name="search_text">Поиск</string>
    <string name="call_to_doctor">Позвонить</string>
    <string name="call_to_doctor_text">Позвонить</string>
    <string name="send_message_to_doctor_text">Написать</string>
    <string name="education">Образование</string>
    <string name="doctor_info_text">Информация</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>