<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegistrationActivity">


    <include
        android:id="@+id/toolbar_register_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        layout="@layout/toolbar_registration"/>

    <TextView
        android:id="@+id/your_first_name_text"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_register_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/first_name_text"
        android:fontFamily="@font/gilroy"
        android:textSize="16sp"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/first_name_edit"
        app:layout_constraintTop_toBottomOf="@id/your_first_name_text"
        app:layout_constraintLeft_toLeftOf="@id/your_first_name_text"
        app:layout_constraintRight_toRightOf="@id/your_first_name_text"
        android:hint="@string/first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/user_register_image"
        android:src="@drawable/ic_user"
        app:layout_constraintTop_toTopOf="@id/first_name_edit"
        app:layout_constraintBottom_toBottomOf="@id/first_name_edit"
        app:layout_constraintRight_toRightOf="@id/first_name_edit"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/second_name_text"
        app:layout_constraintTop_toBottomOf="@id/first_name_edit"
        app:layout_constraintLeft_toLeftOf="@id/first_name_edit"
        app:layout_constraintRight_toRightOf="@id/first_name_edit"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/your_second_name"
        android:fontFamily="@font/gilroy"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/second_name_edit"
        app:layout_constraintTop_toBottomOf="@id/second_name_text"
        app:layout_constraintLeft_toLeftOf="@id/second_name_text"
        app:layout_constraintRight_toRightOf="@id/second_name_text"
        android:hint="@string/first_name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/user_register_second_name_image"
        app:layout_constraintTop_toTopOf="@id/second_name_edit"
        app:layout_constraintBottom_toBottomOf="@id/second_name_edit"
        app:layout_constraintRight_toRightOf="@id/second_name_edit"
        android:layout_marginRight="@dimen/margin_8"
        android:src="@drawable/ic_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sex_text"
        app:layout_constraintTop_toBottomOf="@id/second_name_edit"
        app:layout_constraintLeft_toLeftOf="@id/second_name_edit"
        android:fontFamily="@font/gilroy"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:text="@string/sex"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/sex_spinner"
        app:layout_constraintTop_toBottomOf="@id/sex_text"
        app:layout_constraintLeft_toLeftOf="@id/sex_text"
        app:layout_constraintRight_toRightOf="@id/sex_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/sex_spinner"
        app:layout_constraintLeft_toLeftOf="@id/sex_spinner"
        app:layout_constraintRight_toRightOf="@id/sex_spinner"
        android:background="#02C495"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/user_register_age_text"
        app:layout_constraintTop_toTopOf="@id/sex_text"
        app:layout_constraintRight_toRightOf="@id/second_name_edit"
        android:text="@string/register_age_text"
        android:fontFamily="@font/gilroy"
        android:textSize="16sp"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/age_spinner"
        app:layout_constraintTop_toBottomOf="@id/user_register_age_text"
        app:layout_constraintLeft_toLeftOf="@id/user_register_age_text"
        app:layout_constraintRight_toRightOf="@id/user_register_age_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/age_spinner"
        app:layout_constraintLeft_toLeftOf="@id/age_spinner"
        app:layout_constraintRight_toRightOf="@id/age_spinner"
        android:background="#02C495"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/verify_register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/corner_bottom_bar"
        android:text="@string/verify_text"
        android:fontFamily="@font/gilroy_bold"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>