<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.VerifyCodeActivity">

    <include
        android:id="@+id/toolbar_verify_include"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        layout="@layout/toolbar_verification"/>

    <TextView
        android:id="@+id/verify_code_text"
        app:layout_constraintTop_toBottomOf="@id/toolbar_verify_include"
        app:layout_constraintLeft_toLeftOf="@id/toolbar_verify_include"
        app:layout_constraintRight_toRightOf="@id/toolbar_verify_include"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:text="@string/verify_code_text"
        android:textSize="18sp"
        android:fontFamily="@font/gilroy_regular"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/code_verify_edit"
        app:layout_constraintTop_toBottomOf="@id/verify_code_text"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="@id/verify_code_text"
        app:layout_constraintRight_toRightOf="@id/verify_code_text"
        android:hint="Код подтверждения"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/code_verify_edit"
        app:layout_constraintBottom_toBottomOf="@id/code_verify_edit"
        app:layout_constraintRight_toRightOf="@id/code_verify_edit"
        android:layout_marginRight="@dimen/margin_8"
        android:src="@drawable/ic_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sms_text_after_edit"
        app:layout_constraintTop_toBottomOf="@id/code_verify_edit"
        app:layout_constraintLeft_toLeftOf="@id/code_verify_edit"
        app:layout_constraintRight_toRightOf="@id/code_verify_edit"
        android:text="@string/sms_text"
        android:layout_marginLeft="@dimen/margin_32"
        android:layout_marginRight="@dimen/margin_32"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="140dp"
        app:layout_constraintTop_toBottomOf="@id/sms_text_after_edit"
        app:layout_constraintLeft_toLeftOf="@id/verify_code_text"
        app:layout_constraintRight_toLeftOf="@id/verify_code_button"
        android:layout_marginTop="@dimen/margin_32"
        android:fontFamily="@font/gilroy_regular"
        android:background="@color/colorGreyToAuth"
        android:text="@string/text_back"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/verify_code_button"
        android:layout_width="140dp"
        app:layout_constraintTop_toTopOf="@id/button_back"
        app:layout_constraintBottom_toBottomOf="@id/button_back"
        app:layout_constraintRight_toRightOf="@id/verify_code_text"
        app:layout_constraintLeft_toRightOf="@id/button_back"
        android:fontFamily="@font/gilroy_regular"
        android:background="@color/colorGreyToAuth"
        android:text="@string/verify_sms_code_text"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/verify_progress_bar"
        app:layout_constraintTop_toBottomOf="@id/verify_code_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_32"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/next_button"
        android:background="@drawable/button_next_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"
        android:text="@string/next_text"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/gilroy_bold"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>